--- a/index.html
+++ b/index.html
@@ -107,6 +107,95 @@
                     <button onclick="checkAnswer(5, this)" data-correct="true">Black Panther</button>
                 </div>
             </div>
+            <div class="question">
+                <h3>6. What's my most ridiculous fear?</h3>
+                <div class="options" data-answered="false">
+                    <button onclick="checkAnswer(6, this)" data-correct="true">Birds</button>
+                    <button onclick="checkAnswer(6, this)">Heights</button>
+                    <button onclick="checkAnswer(6, this)">Lab Diamonds</button>
+                </div>
+            </div>
+
+            <div class="question">
+                <h3>7. What's the first meme song that I've shown you?</h3>
+                <div class="options" data-answered="false">
+                    <button onclick="checkAnswer(7, this)">Heyayeayeaye</button>
+                    <button onclick="checkAnswer(7, this)" data-correct="true">Never gonna give you up</button>
+                    <button onclick="checkAnswer(7, this)">Boom Boom in my room</button>
+                </div>
+            </div>
+
+            <div class="question">
+                <h3>8. What were we laughing at on our first proper date?</h3>
+                <div class="options" data-answered="false">
+                    <button onclick="checkAnswer(8, this)">Chinese TikTok lady</button>
+                    <button onclick="checkAnswer(8, this)">Being attacked by pigeons</button>
+                    <button onclick="checkAnswer(8, this)" data-correct="true">The lady asking her bf to take pictures of her for an hour</button>
+                </div>
+            </div>
+
+            <div class="question">
+                <h3>9. What's my signature move when I want attention?</h3>
+                <div class="options" data-answered="false">
+                    <button onclick="checkAnswer(9, this)">Pouting</button>
+                    <button onclick="checkAnswer(9, this)" data-correct="true">Crying</button>
+                    <button onclick="checkAnswer(9, this)">Demanding it</button>
+                </div>
+            </div>
+
+            <div class="question">
+                <h3>10. Which award did I receive in Model United Nation?</h3>
+                <div class="options" data-answered="false">
+                    <button onclick="checkAnswer(10, this)">Best Delegate</button>
+                    <button onclick="checkAnswer(10, this)">Best Resolution</button>
+                    <button onclick="checkAnswer(10, this)" data-correct="true">The next Kim Jong Un award</button>
+                </div>
+            </div>
+
+            <div class="question">
+                <h3>11. What's the one question that I ask a lot?</h3>
+                <div class="options" data-answered="false">
+                    <button onclick="checkAnswer(11, this)">What are you looking at</button>
+                    <button onclick="checkAnswer(11, this)" data-correct="true">Where's my phone??</button>
+                    <button onclick="checkAnswer(11, this)">Do you love me</button>
+                </div>
+            </div>
+
+            <div class="question">
+                <h3>12. What's the first dish that I cooked for you?</h3>
+                <div class="options" data-answered="false">
+                    <button onclick="checkAnswer(12, this)">Char Siu</button>
+                    <button onclick="checkAnswer(12, this)">Gochujang Pasta</button>
+                    <button onclick="checkAnswer(12, this)" data-correct="true">Red Prawn Pasta</button>
+                </div>
+            </div>
+
+            <div class="question">
+                <h3>13. Who's my favourite actor?</h3>
+                <div class="options" data-answered="false">
+                    <button onclick="checkAnswer(13, this)">Hugh Grant</button>
+                    <button onclick="checkAnswer(13, this)" data-correct="true">Colin Firth</button>
+                    <button onclick="checkAnswer(13, this)">Hugh Jackman</button>
+                </div>
+            </div>
+
+            <div class="question">
+                <h3>14. Why did we run in Bangkok?</h3>
+                <div class="options" data-answered="false">
+                    <button onclick="checkAnswer(14, this)">Someone needed to pee</button>
+                    <button onclick="checkAnswer(14, this)" data-correct="true">A man was following us</button>
+                    <button onclick="checkAnswer(14, this)">Someone's asking for spare change</button>
+                </div>
+            </div>
+
+            <div class="question">
+                <h3>15. Do I have a birthmark?</h3>
+                <div class="options" data-answered="false">
+                    <button onclick="checkAnswer(15, this)">Yes on my leg</button>
+                    <button onclick="checkAnswer(15, this)">No</button>
+                    <button onclick="checkAnswer(15, this)" data-correct="true">Yes on your back</button>
+                </div>
+            </div>
             <button onclick="showResult()">Show Results 💕</button>
         </div>
         <div id="result"></div>
