--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
                 <h3>9. What's my signature move when I want attention?</h3>
                 <div class="options" data-answered="false">
                     <button onclick="checkAnswer(9, this)">Pouting</button>
-                    <button onclick="checkAnswer(9, this)" data-correct="true">Crying</button>
-                    <button onclick="checkAnswer(9, this)">Demanding it</button>
+                    <button onclick="checkAnswer(9, this)" data-correct="true">Demanding it</button>
+                    <button onclick="checkAnswer(9, this)">Crying</button>
                 </div>
             </div>
 
