--- a/index.html
+++ b/index.html
@@ -270,14 +270,18 @@
                 message = "Perfect score! You're the most amazing boyfriend ever! 💑";
                 resultDiv.style.background = '#e8f5e9';
                 videoId = 'dQw4w9WgXcQ'; 
+                startTime = 1;
             } else if (correctAnswers >= 12) {
                 message = "Not bad! You know me pretty well! 💕";
                 resultDiv.style.background = '#fff3e0';
                 videoId = 'VcjzHMhBtf0';
+                startTime = 193; 
             } else {
                 message = "Well... maybe we need more date nights! 😘";
                 resultDiv.style.background = '#ffebee';
                 videoId = '7wfYIMyS_dI';
+                startTime = 12; 
+    
             }
             
             resultDiv.innerHTML = `
