--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 </head>
 <body>
     <div class="quiz-container">
-        <h1>💝 Our 2nd Anniversary Quiz 💝</h1>
+        <h1>🐧 Our 2nd Anniversary Quiz 🐸</h1>
         <div id="quiz">
             <div class="question">
                 <h3>1. When was our first date?</h3>
@@ -295,17 +295,17 @@
             let startTime;
 
             if (correctAnswers === 15) {
-                message = "Perfect score! You're the most amazing boyfriend ever! 💑";
+                message = "Perfect score! You're the most amazing boyfriend ever! 🥰";
                 resultDiv.style.background = '#e8f5e9';
                 videoId = 'dQw4w9WgXcQ'; 
-                startTime = 1;
+                startTime = 0;
             } else if (correctAnswers >= 12) {
-                message = "Not bad! You know me pretty well! 💕";
+                message = "Not bad! You know me pretty well! ❤️";
                 resultDiv.style.background = '#fff3e0';
                 videoId = 'VcjzHMhBtf0';
-                startTime = 193; 
+                startTime = 199; 
             } else {
-                message = "Well... maybe we need more date nights! 😘";
+                message = "Well... maybe we need more date nights! 🤯";
                 resultDiv.style.background = '#ffebee';
                 videoId = '7wfYIMyS_dI';
                 startTime = 12; 
