--- a/index.html
+++ b/index.html
@@ -6,103 +6,105 @@
     <title>Our 2nd Anniversary Quiz</title>
     <style>
         .video-container {
-            position: relative;
-            padding-bottom: 56.25%; /* 16:9 Aspect Ratio */
-            height: 0;
-            overflow: hidden;
-            margin-top: 20px;
-        }
+    position: relative;
+    padding-bottom: 56.25%;
+    height: 0;
+    overflow: hidden;
+    margin: 20px auto;
+    max-width: 640px;
+}
 
-        .video-container iframe {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-        }
+.video-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 8px;
+}
 
-        body {
-            font-family: Arial, sans-serif;
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
-            background: #f0f8ff;
-        }
+body {
+    font-family: Arial, sans-serif;
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 20px;
+    background: #f0f8ff;
+}
 
-        .quiz-container {
-            background: white;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
-        }
+.quiz-container {
+    background: white;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0,0,0,0.1);
+}
 
-        .question {
-            margin-bottom: 20px;
-            padding: 15px;
-            border-radius: 5px;
-            background: #f8f9fa;
-        }
+.question {
+    margin-bottom: 20px;
+    padding: 15px;
+    border-radius: 5px;
+    background: #f8f9fa;
+}
 
-        .options {
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
-        }
+.options {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
 
-        button {
-            padding: 10px;
-            margin: 5px;
-            border: none;
-            border-radius: 5px;
-            background: #4CAF50;
-            color: white;
-            cursor: pointer;
-            transition: background 0.3s;
-        }
+button {
+    padding: 10px;
+    margin: 5px;
+    border: none;
+    border-radius: 5px;
+    background: #4CAF50;
+    color: white;
+    cursor: pointer;
+    transition: background 0.3s;
+}
 
-        button:hover {
-            background: #45a049;
-        }
+button:hover {
+    background: #45a049;
+}
 
-        button:disabled {
-            background: #cccccc;
-            cursor: not-allowed;
-        }
+button:disabled {
+    background: #cccccc;
+    cursor: not-allowed;
+}
 
-        .correct {
-            background: #4CAF50 !important;
-        }
+.correct {
+    background: #4CAF50 !important;
+}
 
-        .incorrect {
-            background: #ff4d4d !important;
-        }
+.incorrect {
+    background: #ff4d4d !important;
+}
 
-        #result {
-            margin-top: 20px;
-            padding: 15px;
-            border-radius: 5px;
-            display: none;
-        }
+#result {
+    margin-top: 20px;
+    padding: 15px;
+    border-radius: 5px;
+    display: none;
+}
 
-        .hearts {
-            color: #ff4d6d;
-        }
+.hearts {
+    color: #ff4d6d;
+}
 
-        .play-button {
-            background: #ff69b4;
-            color: white;
-            padding: 10px 20px;
-            border: none;
-            border-radius: 20px;
-            margin: 15px 0;
-            cursor: pointer;
-            font-size: 16px;
-            transition: transform 0.2s;
-        }
+.play-button {
+    background: #ff69b4;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 20px;
+    margin: 15px 0;
+    cursor: pointer;
+    font-size: 16px;
+    transition: transform 0.2s;
+}
 
-        .play-button:hover {
-            transform: scale(1.05);
-        }
+.play-button:hover {
+    transform: scale(1.05);
+}
     </style>
 </head>
 <body>
@@ -326,7 +328,7 @@
             const videoId = correctAnswers === 15 ? 'dQw4w9WgXcQ' : 
                             correctAnswers >= 12 ? 'VcjzHMhBtf0' : '7wfYIMyS_dI';
             const startTime = correctAnswers === 15 ? 1 : 
-                             correctAnswers >= 12 ? 193 : 12;
+                             correctAnswers >= 12 ? 199 : 12;
             
             videoContainer.innerHTML = `
                 <iframe 
