--- a/index.html
+++ b/index.html
@@ -7,20 +7,19 @@
     <style>
         .video-container {
     position: relative;
-    padding-bottom: 56.25%;
-    height: 0;
-    overflow: hidden;
-    margin: 20px auto;
-    max-width: 640px;
+    width: 100%;
+    max-width: 500px; /* Made this smaller */
+    margin: 0 auto;
+    padding: 20px;
+    background: #ffe6e6; /* Light pink background to match your theme */
+    border-radius: 8px;
 }
 
 .video-container iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
     width: 100%;
-    height: 100%;
+    aspect-ratio: 16/9;
     border-radius: 8px;
+    border: none;
 }
 
 body {
@@ -305,7 +304,7 @@ button:disabled {
                 message = "Not bad! You know me pretty well! ❤️";
                 resultDiv.style.background = '#fff3e0';
                 videoId = 'VcjzHMhBtf0';
-                startTime = 199; 
+                startTime = 201; 
             } else {
                 message = "Well... maybe we need more date nights! 🤯";
                 resultDiv.style.background = '#ffebee';
@@ -328,7 +327,7 @@ button:disabled {
             const videoId = correctAnswers === 15 ? 'dQw4w9WgXcQ' : 
                             correctAnswers >= 12 ? 'VcjzHMhBtf0' : '7wfYIMyS_dI';
             const startTime = correctAnswers === 15 ? 1 : 
-                             correctAnswers >= 12 ? 199 : 12;
+                             correctAnswers >= 12 ? 201 : 12;
             
             videoContainer.innerHTML = `
                 <iframe 
