--- a/index.html
+++ b/index.html
@@ -5,80 +5,159 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our 2nd Anniversary Quiz</title>
     <style>
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            margin: 0;
+            padding: 20px;
+            background: linear-gradient(135deg, #ffe6e6, #f0f8ff);
+            min-height: 100vh;
+        }
+
+        .quiz-container {
+            max-width: 800px;
+            margin: 0 auto;
+            background: white;
+            padding: 30px;
+            border-radius: 20px;
+            box-shadow: 0 10px 20px rgba(0,0,0,0.1);
+        }
+
+        h1 {
+            text-align: center;
+            color: #ff6b6b;
+            font-size: 2.5rem;
+            margin-bottom: 30px;
+            text-shadow: 2px 2px 4px rgba(0,0,0,0.1);
+        }
+
+        .question {
+            margin-bottom: 25px;
+            padding: 20px;
+            border-radius: 15px;
+            background: #f8f9fa;
+            box-shadow: 0 4px 6px rgba(0,0,0,0.05);
+            transition: transform 0.2s;
+        }
+
+        .question:hover {
+            transform: translateY(-2px);
+        }
+
+        h3 {
+            color: #4a4a4a;
+            margin-top: 0;
+            font-size: 1.2rem;
+        }
+
+        .options {
+            display: flex;
+            flex-direction: column;
+            gap: 12px;
+        }
+
+        button {
+            padding: 12px 20px;
+            border: none;
+            border-radius: 10px;
+            background: #ff6b6b;
+            color: white;
+            cursor: pointer;
+            transition: all 0.3s;
+            font-size: 1rem;
+            font-weight: 500;
+        }
+
+        button:hover:not(:disabled) {
+            background: #ff5252;
+            transform: scale(1.02);
+        }
+
+        button:disabled {
+            background: #cccccc;
+            cursor: not-allowed;
+        }
+
+        .correct {
+            background: #4CAF50 !important;
+            animation: pulse 0.5s;
+        }
+
+        .incorrect {
+            background: #ff4d4d !important;
+            animation: shake 0.5s;
+        }
+
+        @keyframes pulse {
+            0% { transform: scale(1); }
+            50% { transform: scale(1.05); }
+            100% { transform: scale(1); }
+        }
+
+        @keyframes shake {
+            0%, 100% { transform: translateX(0); }
+            25% { transform: translateX(-5px); }
+            75% { transform: translateX(5px); }
+        }
+
+        #result {
+            margin-top: 30px;
+            padding: 20px;
+            border-radius: 15px;
+            display: none;
+            text-align: center;
+        }
+
+        .play-button {
+            background: #ff69b4;
+            padding: 15px 30px;
+            border-radius: 25px;
+            font-size: 1.1rem;
+            margin: 20px 0;
+            box-shadow: 0 4px 15px rgba(255,105,180,0.3);
+        }
+
+        .play-button:hover {
+            background: #ff459a;
+            transform: scale(1.05);
+        }
+
         .video-container {
-    position: relative;
-    padding-bottom: 56.25%; /* 16:9 Aspect Ratio */
-    height: 0;
-    overflow: hidden;
-    margin-top: 20px;
-}
+            position: relative;
+            padding-bottom: 56.25%;
+            height: 0;
+            overflow: hidden;
+            border-radius: 15px;
+            margin-top: 20px;
+            box-shadow: 0 8px 16px rgba(0,0,0,0.1);
+        }
 
-.video-container iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-}
+        .video-container iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            border-radius: 15px;
+            border: none;
+        }
 
-.quiz-container {
-    background: white;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
-}
+        @media (max-width: 600px) {
+            body {
+                padding: 10px;
+            }
 
-.question {
-    margin-bottom: 20px;
-    padding: 15px;
-    border-radius: 5px;
-    background: #f8f9fa;
-}
+            .quiz-container {
+                padding: 20px;
+            }
 
-.options {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-}
+            h1 {
+                font-size: 2rem;
+            }
 
-button {
-    padding: 10px;
-    margin: 5px;
-    border: none;
-    border-radius: 5px;
-    background: #4CAF50;
-    color: white;
-    cursor: pointer;
-    transition: background 0.3s;
-}
-
-button:hover {
-    background: #45a049;
-}
-
-button:disabled {
-    background: #cccccc;
-    cursor: not-allowed;
-}
-
-.correct {
-    background: #4CAF50 !important;
-}
-
-.incorrect {
-    background: #ff4d4d !important;
-}
-
-#result {
-    margin-top: 20px;
-    padding: 15px;
-    border-radius: 5px;
-    display: none;
-}
-
-.hearts {
-    color: #ff4d6d;
-}
+            button {
+                padding: 10px 15px;
+            }
+        }
     </style>
 </head>
 <body>
